[package]
name = "rigid_walk"
version = "0.1.0"
authors = ["Multirious"]
description = "Walk to any angle and distance using rigid angle"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
turtle = { git = "https://github.com/sunjay/turtle", version = "1.0.0-rc.4" }
